Revise entire market

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,5 +1,7 @@
 \newacronym[longplural=servicios de regulación terciaria]{afrr}{aFRR}{servicio de regulación terciaria}
 
+\newacronym[longplural=interfaces de programación de aplicaciones]{api}{API}{interfaz de programación de aplicaciones}
+
 \newacronym[longplural=direcciones comunes de unidad de datos del servicio de aplicación]{asdu}{ASDU}{dirección común de unidad de datos del servicio de aplicación}
 
 \newacronym[longplural=sistemas de almacenamiento de energía en baterías]{bess}{BESS}{sistema de almacenamiento de energía en baterías}
@@ -13,6 +15,8 @@
 \newacronym[longplural=Comisiones Nacionales de los Mercados y la Competencia]{cnmc}{CNMC}{Comisión Nacional de los Mercados y la Competencia}
 
 \newacronym[longplural=almacenes de datos]{dw}{DW}{almacén de datos}
+
+\newacronym[longplural=extracciones-transformaciones-cargas]{etl}{ETL}{extracción-transformacion-carga}
 
 \newacronym[longplural=reservas para la contención de frecuencia]{fcr}{FCR}{reserva para la contención de frecuencia}
 
@@ -31,6 +35,8 @@
 \newacronym[longplural=tecnologías de la información]{it}{IT}{tecnología de la información}
 
 \newacronym[longplural=indicadores de desempeño]{kpi}{KPI}{indicador de desempeño}
+
+\newacronym[longplural=limitaciones al sujeto]{limitacionsuj}{LIMITACIONESUJ}{limitación al sujeto}
 
 \newacronym[longplural=programaciónes lineales]{lp}{LP}{programación lineal}
 
