--- a/principal.tex
+++ b/principal.tex
@@ -52,12 +52,12 @@
 
 \section*{Todo}
 \begin{enumerate}
-  \item Quitar imagenes de OMIE y REE (<1 día)
+  \item Formato de nombres de librería  \texttt{\textbackslash textsc\{\}}
   \item Acrónimos MD MI MIC LP MILP MIBEL (mercado ibérico, mercado eléctrico, ...) (<1 día)
   \item Imágenes y tablas optional caption \texttt{\textbackslash caption[]\{\}} para que no salgan las citas en el indice de figuras y tablas (<1 día)
   \item Resumen en inglés de media página, incluyendo el título en inglés y una lista de no más de 10 palabras clave en inglés (<1 día)
   \item ¿Anexo de símbolos? (1 día)
-  \item Completar figuras (2 días)
+  \item Completar figuras (¿diagrama por apartado principal?) (2 días)
 \end{enumerate}
 
 \setcounter{page}{-1}
