--- a/references.bib
+++ b/references.bib
@@ -3,7 +3,7 @@
   author = {AleaSoft Energy Forecasting},
   url    = {https://aleasoft.com/es/gestion-eficiente-baterias-rentabilidad-proyectos-renovables/},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{aveva2025aveva,
@@ -11,7 +11,7 @@
   author = {AVEVA},
   url    = {https://www.aveva.com/en/products/aveva-pi-system/},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @inproceedings{azahra2020optimized,
@@ -67,7 +67,7 @@
   author = {Contemporary Amperex Technology Co., Limited (CATL)},
   url    = {https://www.catl.com/},
   year   = {2023},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{cnmc2024balance,
@@ -110,7 +110,7 @@
   author = {DEUTZ Australia},
   year   = {2025},
   url    = {https://www.deutz.com.au/resources/what-is-a-battery-energy-storage-system-bess/},
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @article{dong2021strategic,
@@ -128,7 +128,7 @@
   author = {Enspired Trading},
   url    = {https://www.enspired-trading.com/bess},
   year   = 2025,
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @misc{entelios2025cross,
@@ -136,7 +136,7 @@
   author = {Entelios},
   url    = {https://www.entelios.de/cross-market-optimierung/},
   year   = 2025,
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @misc{gallo2023stand,
@@ -240,7 +240,7 @@
   author = {Iberdrola},
   url    = {https://www.iberdrola.com/conocenos/nuestra-actividad/almacenamiento-energia/bess},
   year   = {2024},
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @manual{iec2016telecontrol,
@@ -255,7 +255,7 @@
   author = {Ikerlan},
   url    = {https://baic.eus/ikerlan-ia4bat-optimizacion-e-inteligencia-artificial-para-la-operacion-de-baterias-de-segunda-vida-en-tiempo-real/},
   year   = 2025,
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @misc{ingeteam2022ingeteam,
@@ -263,7 +263,7 @@
   author = {Ingeteam},
   url    = {https://www.ingeteam.com/SaladePrensa/Noticias/tabid/226/articleType/ArticleView/articleId/3390/Ingeteam-suministra-un-sistema-de-baterias-y-su-electronica-de-potencia-para-la-mayor-planta-de-hidrogeno-verde-de-Europa.aspx},
   year   = {2022},
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @misc{ingeteam2025ingeteam,
@@ -271,7 +271,7 @@
   author = {Ingeteam},
   url    = {https://www.ingeteam.com/},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{irena2025irena,
@@ -279,7 +279,7 @@
   author = {International Renewable Energy Agency},
   url    = {https://www.irena.org/costs},
   year   = {2025},
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @inproceedings{kalenderova2024batery,
@@ -371,12 +371,26 @@
   publisher = {Elsevier}
 }
 
+@misc{mte2019resolucion,
+  title  = {Resolución de 11 de diciembre de 2019, del Ministerio para la Transición Ecológica, por la que se aprueban determinados procedimientos de operación para su adaptación al Real Decreto 244/2019, de 5 de abril, por el que se regulan las condiciones administrativas, técnicas y económicas del autoconsumo de energía eléctrica},
+  author = {Ministerio para la Transición Ecológica},
+  url    = {https://www.boe.es/eli/es/res/2019/12/11/(3)},
+  year   = {2019},
+}
+
 @misc{mterd2024orden,
   title  = {Orden TED/1487/2024, de 26 de diciembre, por la que se establecen los precios de los cargos del sistema eléctrico y se establecen diversos costes regulados del sistema eléctrico para el ejercicio 2025},
   author = {Ministerio para la Transición Ecológica y el Reto Demográfico},
   url    = {https://www.boe.es/eli/es/o/2024/12/26/ted1487},
   year   = {2024},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
+}
+
+@misc{omie2025acceso,
+  title  = {Acceso a ficheros},
+  author = {OMIE},
+  url    = {https://www.omie.es/es/file-access-list},
+  year   = {2025}
 }
 
 @misc{omie2025instruccion,
@@ -384,7 +398,7 @@
   author = {OMIE},
   url    = {https://www.omie.es/sites/default/files/2025-03/instruccion_1_2025_es_1.pdf},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{omie2025mercado,
@@ -392,7 +406,21 @@
   author = {OMIE},
   url    = {https://www.omie.es/es/mercado-de-electricidad},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
+}
+
+@misc{omie2025modelo,
+  title  = {Modelo de Ficheros para la distribución pública de Información del mercado de electricidad -- Versión 1.36},
+  author = {OMIE},
+  url    = {https://www.omie.es/sites/default/files/2025-03/formato_ficheros_inf_pub_136.pdf},
+  year   = {2025}
+}
+
+@misc{omie2025reglas,
+  title  = {Reglas de funcionamiento del mercado diario e intradiario de electricidad},
+  author = {OMIE},
+  url    = {https://www.omie.es/sites/default/files/2024-03/Anexo%20I_Propuesta%20de%20Reglas%20IDA%20tras%20consulta%20con%20control%20de%20cambios.pdf},
+  year   = {2024},
 }
 
 @inproceedings{parlikar2019topology,
@@ -415,6 +443,13 @@
   publisher = {Wiley Online Library}
 }
 
+@misc{red2025esios,
+  title  = {E·SIOS - electricidad · datos · transparencia},
+  author = {Red Eléctrica de España},
+  url    = {https://www.esios.ree.es},
+  year   = {2025}
+}
+
 @manual{ree2009protocolo,
   author = {Red Eléctrica de España},
   title  = {Protocolo de comunicaciones entre los sistemas de gestión del operador del sistema y equipos de control de consumidores interrumpibles y empresas distribuidoras (PCC-SCECI)},
@@ -428,7 +463,7 @@
   author = {Red Eléctrica de España},
   url    = {https://www.esios.ree.es/es/unidades-fisicas},
   year   = {2025},
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @article{shamarova2022review,
@@ -442,10 +477,11 @@
   publisher = {MDPI}
 }
 
-@article{spiller2020aging,
+@mastersthesis{spiller2020aging,
   title  = {Aging and MILP modelling for BESS},
   author = {Spiller, Matteo},
-  year   = {2020}
+  year   = {2020},
+  school = {Politecnico di Milano}
 }
 
 @misc{sunkko2025two,
@@ -453,7 +489,7 @@
   author = {Sunkko},
   url    = {https://sunkko.net/blog/two-types-of-bmss-and-each-wiring-diagram/},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{swales1999open,
@@ -470,8 +506,16 @@
   title  = {Battery Solutions},
   author = {Sympower},
   url    = {https://sympower.net/battery-solutions},
-  year   = 2025,
-  note   = {Accessed: 2025-09-15}
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
+}
+
+@misc{talend2025modern,
+  title  = {Modern data management that drives real value},
+  author = {Talend},
+  url    = {https://www.talend.com/},
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
 }
 
 @article{tejada2019review,
@@ -498,7 +542,7 @@
   number = {UNE-EN 60870-5-104:2016},
   url    = {https://www.une.org/encuentra-tu-norma/busca-tu-norma/norma?c=N0057580},
   year   = {2017},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{villagrasa2023como,
@@ -506,7 +550,7 @@
   author = {Jorge Villagrasa},
   url    = {https://edem.eu/como-se-fija-el-precio-de-la-electricidad-en-espana-para-dummies/},
   year   = 2023,
-  note   = {Accessed: 2025-09-15}
+  note   = {Accessed: 2025-09-05}
 }
 
 @article{williams1994purdue,
@@ -536,5 +580,5 @@
   author = {Zscaler},
   url    = {https://www.zscaler.com/resources/security-terms-glossary/what-is-purdue-model-ics-security},
   year   = {2025},
-  note   = {Accedido: 2025-09-15}
+  note   = {Accedido: 2025-09-05}
 }
