--- a/title.tex
+++ b/title.tex
@@ -10,6 +10,10 @@
 
   \vspace{0.5cm}
 
+  {\large OPTIBAT\@: CROSS-MARKET BATTERY OPTIMIZATION}\\
+
+  \vspace{0.5cm}
+
   \vspace{0.5cm}
 
   {\large JOSU GOMEZ ARANA}\\
@@ -33,7 +37,7 @@
 
   \vspace{0.5cm}
 
-  15 de septiembre de 2025\\
+  5 de septiembre de 2025\\
 
   \vspace{1cm}
 
