--- a/chapter1.tex
+++ b/chapter1.tex
@@ -30,7 +30,7 @@ Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología ene
 
 Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más que nada, es justamente imprescindible controlar la carga y descarga de estos dispositivos cuidadosamente para prolongar su vida útil y asegurar el correcto funcionamiento de los mismos. Como las baterías cuentan con un \gls{capex} inicialmente considerable, pero un \gls{opex} mínimo~\cite{larsson2018cost}, lo que se busca es su rentabilidad mediante el beneficio generado a través del arbitraje de la energía almacenada en el mercado eléctrico.
 
-Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería indefinidamente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
+Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería indefinidamente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{cnmc2025resolucion, omie2025instruccion}), hacen que la automatización sea altamente relevante.
 
 De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de licitación manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol, previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
@@ -84,7 +84,7 @@ El plan de trabajo consta de la distribución en tareas del desarrollo del proye
 \begin{figure}[h]
   \centering
   \resizebox{\textwidth}{!}{
-    \begin{ganttchart}[link bulge = 1.3, link/.style={-to, rounded corners = 3pt}, milestone/.append style={xscale=5}, time slot format=isodate, time slot unit=day, x unit=1mm]{2025-02-10}{2025-09-15}
+    \begin{ganttchart}[link bulge = 1.3, link/.style={-to, rounded corners = 3pt}, milestone/.append style={xscale=5}, time slot format=isodate, time slot unit=day, x unit=1mm]{2025-02-10}{2025-09-05}
       \gantttitlecalendar{month=shortname}\\
       \ganttgroup[name=analisis]{Análisis preliminar}{2025-02-10}{2025-03-05}\\
       \ganttbar[name=normativa]{Estudio de la normativa}{2025-02-10}{2025-02-16}\\
@@ -110,11 +110,11 @@ El plan de trabajo consta de la distribución en tareas del desarrollo del proye
       \ganttgroup[name=experimentacion]{Experimentación}{2025-07-01}{2025-08-17}\\
       \ganttbar[name=rendimiento]{Pruebas de integración de rendimiento}{2025-07-01}{2025-07-31}\\
       \ganttbar[name=comparaciones]{Análisis comparativos locales}{2025-08-01}{2025-08-17}\\
-      \ganttgroup[name=redaccion]{Redacción del informe}{2025-07-01}{2025-09-15}\\
+      \ganttgroup[name=redaccion]{Redacción del informe}{2025-07-01}{2025-09-05}\\
       \ganttbar[name=estructuracion]{Estructuración de los apartados}{2025-07-01}{2025-7-21}\\
       \ganttbar[name=typesetting]{Composición tipográfica}{2025-07-15}{2025-8-31}\\
       \ganttbar[name=contenido]{Elaboración del contenido}{2025-07-15}{2025-8-31}\\
-      \ganttbar[name=revision]{Revisión y edición}{2025-08-25}{2025-9-15}\\
+      \ganttbar[name=revision]{Revisión y edición}{2025-08-25}{2025-09-05}\\
       \ganttlink{normativa}{mercado}
       \ganttlink{mercado}{baterias}
       \ganttlink[link type=s-s]{typesetting}{contenido}
